--- a/index.html
+++ b/index.html
@@ -45,13 +45,27 @@
                   <h3 class="card__heading">Lélia Gonzalez</h3>
                 </div>
               </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(/img/marielle-franco.png)"></div>
+                <div class="card__content">
+                  <p class="card__category"></p>
+                  <h3 class="card__heading">Marielle Franco</h3>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(/img/rosa-parks.png)"></div>
+                <div class="card__content">
+                  <p class="card__category"></p>
+                  <h3 class="card__heading">Rosa Parks</h3>
+                </div>
+              </a>
             <div>
           </section>
+          <div class="footer">
+              <h6>Feito por Gessica Oliveira</h6>
+          </div>
         </div>
         <!------- End Content ------->
-        <div class="footer">
-            <h6>by Gessica Oliveira</h6>
-        </div>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
