--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Dicionário de Mulheres Negras</title>
@@ -17,46 +18,47 @@
         </div>
         <section class="hero-section">
             <div class="card-grid">
-              <a class="card" href="#">
+              <a class="card" data-toggle="modal" data-target="#modalAngelaDavis">
                 <div class="card__background" style="background-image: url(/img/angela-davis.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Angela Davis</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </a>
-              <a class="card" href="#">
+
+              <a class="card" data-toggle="modal" data-target="#modalCarolinaDeJesus">
                 <div class="card__background" style="background-image: url(/img/carolina-de-jesus.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Carolina de Jesus</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </a>
-              <a class="card" href="#">
+              <a class="card" data-toggle="modal" data-target="#modalConceicaoEvaristo">
                 <div class="card__background" style="background-image: url(/img/conceicao-evaristo.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Conceição Evaristo</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </li>
-              <a class="card" href="#">
+              <a class="card" data-toggle="modal" data-target="#modalLeliaGonzalez">
                 <div class="card__background" style="background-image: url(/img/lelia-gonzalez.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Lélia Gonzalez</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </a>
-              <a class="card" href="#">
+              <a class="card" data-toggle="modal" data-target="#modalMarielleFranco">
                 <div class="card__background" style="background-image: url(/img/marielle-franco.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Marielle Franco</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </a>
-              <a class="card" href="#">
+              <a class="card" data-toggle="modal" data-target="#modalRosaParks">
                 <div class="card__background" style="background-image: url(/img/rosa-parks.png)"></div>
                 <div class="card__content">
                   <p class="card__category"></p>
-                  <h3 class="card__heading">Rosa Parks</h3>
+                  <h3 class="card__heading"></h3>
                 </div>
               </a>
             <div>
@@ -67,6 +69,135 @@
         </div>
         <!------- End Content ------->
 
-    <script type="text/javascript" src="script.js"></script>
+        <!------- Modals ------->
+        <div class="modal fade" id="modalAngelaDavis" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalCarolinaDeJesus" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalConceicaoEvaristo" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalLeliaGonzalez" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalMarielleFranco" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalRosaParks" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                      <!-- Conteúdo da modal aqui -->
+                      <p>Informações detalhadas sobre a personalidade.</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <!------- End Modals ------->
+
+        <script type="text/javascript" src="script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script>
+          $(document).ready(function () {
+            // Ativar o carrossel dos cards
+            $('.card-grid').slick({
+                slidesToShow: 3, // Número de cards visíveis
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 2000, // Tempo de intervalo entre os cards
+            });
+          });
+        </script>
 </body>
 </html>
