--- a/index.html
+++ b/index.html
@@ -10,194 +10,83 @@
     <title>Dicionário de Mulheres Negras</title>
 </head>
 <body>
-    <!------- Content ------->
-    <div class="container">
-        <div class="header">
-            <h1>Dicionário de Mulheres Negras</h1>
-            <p>Dicionário que lista todas as mulheres que fizeram e ainda fazem parte da história do Brasil e mundo.</p>
-        </div>
-        <section class="hero-section">
-            <div class="card-grid">
-              <a class="card" data-toggle="modal" data-target="#modalAngelaDavis">
-                <div class="card__background" style="background-image: url(/img/angela-davis.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </a>
+  <!------- Content ------->
+  <div class="container">
+      <div class="header">
+          <h1>Dicionário de Mulheres Negras</h1>
+          <p>Dicionário que lista todas as mulheres que fizeram e ainda fazem parte da história do Brasil e mundo.</p>
+      </div>
 
-              <a class="card" data-toggle="modal" data-target="#modalCarolinaDeJesus">
-                <div class="card__background" style="background-image: url(/img/carolina-de-jesus.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </a>
-              <a class="card" data-toggle="modal" data-target="#modalConceicaoEvaristo">
-                <div class="card__background" style="background-image: url(/img/conceicao-evaristo.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </li>
-              <a class="card" data-toggle="modal" data-target="#modalLeliaGonzalez">
-                <div class="card__background" style="background-image: url(/img/lelia-gonzalez.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </a>
-              <a class="card" data-toggle="modal" data-target="#modalMarielleFranco">
-                <div class="card__background" style="background-image: url(/img/marielle-franco.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </a>
-              <a class="card" data-toggle="modal" data-target="#modalRosaParks">
-                <div class="card__background" style="background-image: url(/img/rosa-parks.png)"></div>
-                <div class="card__content">
-                  <p class="card__category"></p>
-                  <h3 class="card__heading"></h3>
-                </div>
-              </a>
-            <div>
-          </section>
-          <div class="footer">
-              <h6>Feito por Gessica Oliveira</h6>
-          </div>
-        </div>
-        <!------- End Content ------->
+      <section class="hero-section">
+        <div class="card-grid">
 
-        <!------- Modals ------->
-        <div class="modal fade" id="modalAngelaDavis" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/angela-davis.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Angela</h3>
+            </div>
           </div>
-        </div>
-        <div class="modal fade" id="modalCarolinaDeJesus" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="modal fade" id="modalConceicaoEvaristo" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="modal fade" id="modalLeliaGonzalez" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="modal fade" id="modalMarielleFranco" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="modal fade" id="modalRosaParks" tabindex="-1" role="dialog" aria-labelledby="modalAngelaDavisLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="modalAngelaDavisLabel">Nome da Personalidade</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <!-- Conteúdo da modal aqui -->
-                      <p>Informações detalhadas sobre a personalidade.</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <!------- End Modals ------->
 
-        <script type="text/javascript" src="script.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script>
-          $(document).ready(function () {
-            // Ativar o carrossel dos cards
-            $('.card-grid').slick({
-                slidesToShow: 3, // Número de cards visíveis
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 2000, // Tempo de intervalo entre os cards
-            });
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/carolina-de-jesus.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Carolina</h3>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/conceicao-evaristo.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Conceição</h3>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/lelia-gonzalez.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Lélia</h3>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/marielle-franco.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Marielle</h3>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__background" style="background-image: url(/img/rosa-parks.png)"></div>
+            <div class="card__content">
+              <p class="card__category"></p>
+              <h3 class="card__heading">Rosa</h3>
+            </div>
+          </div>
+
+        <div>
+      </section>
+
+      <div class="footer">
+          <h6>Feito por Gessica Oliveira</h6>
+      </div>
+  </div>
+  <!------- End Content ------->
+
+  <script type="text/javascript" src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+      $(document).ready(function () {
+          // Inicializar o carrossel de cards
+          $('#card-carousel').carousel({
+              interval: 2000, // Tempo de intervalo entre os cards
+              pause: "hover" // Pausar quando o mouse estiver sobre o carrossel
           });
-        </script>
+      });
+  </script>
 </body>
 </html>
