--- a/index.html
+++ b/index.html
@@ -1,92 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Dicionário de Mulheres Negras</title>
-</head>
-<body>
-  <!------- Content ------->
-  <div class="container">
+  </head>
+  <body>
+    <div class="container">
       <div class="header">
-          <h1>Dicionário de Mulheres Negras</h1>
-          <p>Dicionário que lista todas as mulheres que fizeram e ainda fazem parte da história do Brasil e mundo.</p>
+        <h1>Dicionário de Mulheres Negras</h1>
+        <p>
+          Dicionário que lista todas as mulheres que fizeram e ainda fazem parte
+          da história do Brasil e mundo.
+        </p>
       </div>
 
       <section class="hero-section">
-        <div class="card-grid">
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/angela-davis.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Angela</h3>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/carolina-de-jesus.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Carolina</h3>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/conceicao-evaristo.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Conceição</h3>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/lelia-gonzalez.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Lélia</h3>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/marielle-franco.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Marielle</h3>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__background" style="background-image: url(/img/rosa-parks.png)"></div>
-            <div class="card__content">
-              <p class="card__category"></p>
-              <h3 class="card__heading">Rosa</h3>
-            </div>
-          </div>
-
-        <div>
+        <div class="card-grid" id="content"></div>
       </section>
 
       <div class="footer">
-          <h6>Feito por Gessica Oliveira</h6>
+        <h6>Feito por Gessica Oliveira</h6>
       </div>
-  </div>
-  <!------- End Content ------->
+    </div>
 
-  <script type="text/javascript" src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script>
-      $(document).ready(function () {
-          // Inicializar o carrossel de cards
-          $('#card-carousel').carousel({
-              interval: 2000, // Tempo de intervalo entre os cards
-              pause: "hover" // Pausar quando o mouse estiver sobre o carrossel
-          });
-      });
-  </script>
-</body>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
